# FawkesProject

./: .gitignore  CMakeLists.txt  README.md
fawkeslib/: CMakeLists.txt
fawkeslib/console/: CMakeLists.txt
fawkeslib/console/include/fawkes/console/: command_console.h  command_help.h  console.h
fawkeslib/console/src/: command_console.cpp  command_help.cpp  console.cpp
fawkeslib/core/: CMakeLists.txt
fawkeslib/core/include/fawkes/core/: common_types.h  debug.h  incbin.h  option_parser.h  resource.h  singleton.h
fawkeslib/core/include/fawkes/core/command/: command.h  command_debug.h  command_handler.h  command_template.h  command_test.h
fawkeslib/core/include/fawkes/core/control/: control.h  control_template.h
fawkeslib/core/include/fawkes/core/error/: error.h
fawkeslib/core/include/fawkes/core/logger/: log.h
fawkeslib/core/include/fawkes/core/network/udp/: udp_client.h  udp_server.h
fawkeslib/core/include/fawkes/core/network/unix/: unix.h  unix_client.h  unix_server.h
fawkeslib/core/include/fawkes/core/transport/: client.h  server.h
fawkeslib/core/include/fawkes/core/types/: byte_array.h
fawkeslib/core/src/: common_types.cpp  debug.cpp  resource.cpp
fawkeslib/core/src/command/: command.cpp  command_debug.cpp  command_handler.cpp  command_test.cpp
fawkeslib/core/src/control/: control.cpp
fawkeslib/core/src/error/: error.cpp
fawkeslib/core/src/json/: cjson.cpp
fawkeslib/core/src/logger/: log.cpp
fawkeslib/core/src/network/udp/: udp_client.cpp  udp_server.cpp
fawkeslib/core/src/network/unix/: unix.cpp  unix_client.cpp  unix_server.cpp
fawkeslib/core/src/transport/: client.cpp  server.cpp
fawkeslib/core/src/types/: byte_array.cpp
fawkeslib/example/: CMakeLists.txt  main.cpp
fawkeslib/example/src/: main.cpp
fawkeslib/http/: CMakeLists.txt
fawkeslib/http/include/fawkes/http/: client.h  http.h  request.h  response.h  route.h  router.h  server.h
fawkeslib/http/src/: client.cpp  client.cpp.new  http.cpp  request.cpp  response.cpp  route.cpp  router.cpp  server.cpp
